<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_data"
        android:title="@string/clear_data"
        app:showAsAction="never" />
</menu>
